# django-hurricane-template

./: LICENSE  README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{cookiecutter.project_name}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg  unikube.yaml
{{cookiecutter.project_name}}/.github/workflows/: python-app.yml
{{cookiecutter.project_name}}/src/: manage.py  pytest.ini
{{cookiecutter.project_name}}/src/configuration/: __init__.py  urls.py
{{cookiecutter.project_name}}/src/configuration/components/: __init__.py  apps.py  caches.py  commons.py  csp.py  logging.py  middlewares.py  storage.py
